# gfi18N

./: README.md  Setup.hs  gfI8N.cabal  gfi18N.cabal
src/gf/: Foods.gf  FoodsEng.gf  FoodsIta.gf  ResIta.gf
src/haskell/: Main.hs
